--- a/src/views/Welcome.module.scss
+++ b/src/views/Welcome.module.scss
@@ -2,7 +2,9 @@
     height: calc(100vh - var(--welcome-nav-height));
     display: flex;
     flex-direction: column;
-    background-image: linear-gradient(to bottom, var(--welcome-bg-start) 0%, var(--welcome-bg-end) 100%);
+    background-image: linear-gradient(to bottom,
+            var(--welcome-bg-start) 0%,
+            var(--welcome-bg-end) 100%);
     margin-bottom: var(--welcome-nav-height);
 
     >header {
@@ -12,7 +14,7 @@
         justify-content: center;
         align-items: center;
         padding-top: 66px;
-        color: #D4D4EE;
+        color: #d4d4ee;
 
         >svg {
             width: 64px;
