--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -6,5 +6,10 @@
     --welcome-nav-height: 64px;
     --welcome-nav-gap: 8px;
     --z-index-bottom-nav: 10;
-    --transition-duration: 0.5s
+    --transition-duration: 0.5s;
+    --button-bg: #5c33be;
+    --button-text: white;
+    --button-font-size: 18px;
+    --button-radius: 8px;
+    --button-height: 48px;
 }
