--- a/src/views/StartPage.module.scss
+++ b/src/views/StartPage.module.scss
@@ -5,3 +5,12 @@
         padding: 16px 16px;
     }
 }
+
+.pig_wrapper {
+    padding: 80px 0;
+
+    .pig {
+        width: 128px;
+        height: 128px;
+    }
+}
