--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -1,20 +1,24 @@
 :root {
-    --welcome-card-bg: white;
-    --welcome-text: white;
-    --welcome-bg-start: #5d33be;
-    --welcome-bg-end: #8f4cd7;
-    --welcome-nav-height: 64px;
-    --welcome-nav-gap: 8px;
-    --z-index-bottom-nav: 10;
-    --transition-duration: 0.5s;
-    --button-bg: #5c33be;
-    --button-text: white;
-    --button-font-size: 18px;
-    --button-radius: 8px;
-    --button-height: 48px;
-    --float-button-text: white;
-    --float-button-bg: var(--button-bg);
-    --navbar-bg-start: var(--welcome-bg-start);
-    --navbar-bg-end: var(--welcome-bg-end);
-    --navbar-text: white;
+  --welcome-card-bg: white;
+  --welcome-text: white;
+  --welcome-bg-start: #5d33be;
+  --welcome-bg-end: #8f4cd7;
+  --welcome-nav-height: 64px;
+  --welcome-nav-gap: 8px;
+  --z-index-bottom-nav: 8;
+  --z-index-overlay: 16;
+  --transition-duration: 0.5s;
+  --button-bg: #5c33be;
+  --button-text: white;
+  --button-font-size: 18px;
+  --button-radius: 8px;
+  --button-height: 48px;
+  --float-button-text: white;
+  --float-button-bg: var(--button-bg);
+  --navbar-bg-start: var(--welcome-bg-start);
+  --navbar-bg-end: var(--welcome-bg-end);
+  --navbar-text: white;
+  --overlay-mask-bg: rgba(0, 0, 0, 0.5);
+  --overlay-bg: white;
+  --top-save-area-height: 24px;
 }
