--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -21,4 +21,6 @@
   --overlay-mask-bg: rgba(0, 0, 0, 0.5);
   --overlay-bg: white;
   --top-save-area-height: 24px;
+  --overlay-user-bg: #5c33be;
+  --overlay-user-text: white;
 }
