--- a/src/components/item/ItemCreate.module.scss
+++ b/src/components/item/ItemCreate.module.scss
@@ -1,6 +1,6 @@
-.navIcon {
-  width: 24px;
-  height: 24px;
-  position: relative;
-  top: 2px;
+.inputPad_wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
