--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -27,7 +27,7 @@
   --button-border-color: #ddd;
   --amount-text: #53a867;
   --date-text: #999999;
-  --button-bg: white;
-  --button-bg-important: #5c33be;
-  --button-text-important: white;
+  --number-bg: white;
+  --number-bg-important: #5c33be;
+  --number-text-important: white;
 }
