--- a/src/components/item/InputPad.module.scss
+++ b/src/components/item/InputPad.module.scss
@@ -40,7 +40,7 @@
   border-top: 1px solid var(--button-border-color);
   > button {
     border: none;
-    background: var(--button-bg);
+    background: var(--number-bg);
     &:nth-child(1) {
       grid-area: n1;
     }
@@ -79,8 +79,8 @@
     }
     &:nth-child(13) {
       grid-area: s;
-      background: var(--button-bg-important);
-      color: var(--button-text-important);
+      background: var(--number-bg-important);
+      color: var(--number-text-important);
     }
   }
 }
