--- a/src/components/tag/TagCreate.module.scss
+++ b/src/components/tag/TagCreate.module.scss
@@ -13,6 +13,9 @@
 .formItem {
   min-height: var(--input-min-height);
   max-width: 100%;
+  &.button {
+    width: 100%;
+  }
   &.input {
     flex-grow: 1;
     border: 1px solid var(--input-border-color);
@@ -26,6 +29,7 @@
       border-color: var(--error-color);
     }
   }
+
   &_name {
   }
   &_value {
