--- a/src/shared/Navbar.module.scss
+++ b/src/shared/Navbar.module.scss
@@ -1,28 +1,32 @@
 .navbar {
-    background: linear-gradient(to bottom, var(--navbar-bg-start), var(--navbar-bg-end));
-    color: var(--navbar-text);
-    fill: var(--navbar-text);
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 28px 8px 28px 8px;
+  background: linear-gradient(
+    to bottom,
+    var(--navbar-bg-start),
+    var(--navbar-bg-end)
+  );
+  color: var(--navbar-text);
+  fill: var(--navbar-text);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 16px 8px 16px 8px;
 }
 
 .title_wrapper {
-    font-size: 22px;
-    font-weight: bold;
-    margin-left: 8px;
+  font-size: 22px;
+  font-weight: bold;
+  margin-left: 8px;
 }
 
 .icon_wrapper {
-    width: 36px;
-    height: 36px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 36px;
+  height: 36px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-    >* {
-        max-width: 100%;
-        max-height: 100%;
-    }
+  > * {
+    max-width: 100%;
+    max-height: 100%;
+  }
 }
