--- a/src/shared/Overlay.module.scss
+++ b/src/shared/Overlay.module.scss
@@ -1,21 +1,21 @@
 .mask {
   position: fixed;
   z-index: var(--z-index-overlay);
-  background-color: var(--overlay-mask-bg);
-  top: var(--top-save-area-height);
+  background: var(--overlay-mask-bg);
+  top: var(--top-safe-area-height);
   left: 0;
   width: 100%;
-  height: calc(100% - var(--top-save-area-height));
+  height: calc(100% - var(--top-safe-area-height));
 }
-
 .overlay {
   position: fixed;
   z-index: calc(var(--z-index-overlay) + 1);
-  background-color: var(--overlay-bg);
-  top: var(--top-save-area-height);
+  background: var(--overlay-bg);
+  top: var(--top-safe-area-height);
   left: 0;
   width: 16em;
-  height: calc(100% - var(--top-save-area-height));
+  height: calc(100% - var(--top-safe-area-height));
+  color: var(--text);
 }
 .currentUser {
   padding: 32px 16px;
@@ -34,4 +34,10 @@
   > .icon {
     margin-right: 12px;
   }
+}
+.icon {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  top: 2px;
 }
