--- a/src/shared/Form.module.scss
+++ b/src/shared/Form.module.scss
@@ -34,6 +34,11 @@
     width: 8em;
     flex-grow: 0;
   }
+  &.select {
+    border: 1px solid var(--input-border-color);
+    border-radius: var(--input-radius);
+    margin: 0 8px;
+  }
 
   &_name {
   }
