--- a/src/assets/stylesheets/vars.scss
+++ b/src/assets/stylesheets/vars.scss
@@ -37,6 +37,7 @@
   --tabs-indicator-bg: rgba(255, 255, 255, 0.5);
   --tag-bg: #efefef;
   --text: #333;
+  --text-muted: #666;
   --top-safe-area-height: 24px;
   --total-bg: #252a43;
   --total-expenses: #53a867;
@@ -53,4 +54,5 @@
   --z-index-bottom-nav: 8;
   --z-index-navbar: 32;
   --z-index-overlay: 16;
+  --bar-bg: #cccccc;
 }
